--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,85 @@ tr:nth-child(even) td {
     margin-right: 1rem;
   }
 }</style>
+	<style type="text/css">
+.bcd140526_post_feed li.item {
+    display: block;
+    clear: both; 
+height: auto;
+    margin: 15px 0 0 0;
+    padding: 15px 0 0 0;
+    border-top: 1px dotted #BBB;
+}
+.bcd140526_post_feed ul {
+    margin: 0;
+ height: auto;
+    padding: 0;
+}
+.bcd140526_post_feed li.item.item-0 {
+    margin: 0;
+    padding: 0; 
+height: auto;
+    border: none;
+}
+.bcd140526_post_feed li.item h3.title {
+    display: block;
+ height: auto;
+    margin: 0 0 5px 0;
+}
+
+.bcd140526_post_feed li.item div.meta {
+    font-size: 11px;
+ height: auto;
+    color: #999;
+	margin: 0 0 5px 0;
+}
+.bcd140526_post_feed li.item div.meta .meta-item {
+    display: inline-block;
+	*display: inline;
+	zoom: 1;
+    margin: 0 1em 0 0;
+ height: auto;
+}
+.bcd140526_post_feed li.item p.snippet {
+    line-height: 1.5em;
+	margin: 0;
+ height: auto;
+}
+.bcd140526_post_feed.list a.thumbnail {
+    margin: 0 7px 7px 0;
+    float: left;
+    display: block;
+    line-height: 1; 
+height: auto;
+	/*
+    width: 48px;
+    height: 48px;
+	*/
+    overflow: hidden;
+    position: relative;
+}
+.bcd140526_post_feed.list a.thumbnail img {
+    width: auto;
+    height: auto;
+}
+.bcd140526_post_feed li.item a.cate {
+    display: block;
+    margin: 0 0 5px 0;
+ height: auto;
+}
+div.bcd140526_post_feed.column a.thumbnail {
+    display: block;
+    width: 100%;
+    line-height: 1;
+    margin: 0 0 5px 0; 
+height: auto;
+}
+div.bcd140526_post_feed.column a.thumbnail img {
+    width: 100%;
+    height: auto;
+}
+</style>
+
 	
 </head>
 
