--- a/_layouts/postpolos.html
+++ b/_layouts/postpolos.html
@@ -106,15 +106,15 @@ post_class: post-template
 //<![CDATA[
 function bwstoc() {
  var bwstoc = i = headinglength = getheading = 0;
- headinglength = document.getElementById("post-toc").querySelectorAll("h2, h3, h4").length;
+ headinglength = document.getElementById("post-toc").querySelectorAll("h2, h3, strong, h4").length;
  if (headinglength > 1) { 
  // Hanya Tampil Jika Ditemukan Minimal 2 Heading
  for (i = 0; i < headinglength; i++) {
- getheading = document.getElementById("post-toc").querySelectorAll("h2, h3, h4")[i].textContent;
+ getheading = document.getElementById("post-toc").querySelectorAll("h2, h3, strong, h4")[i].textContent;
  var bws_1 = getheading.replace(/[^a-z0-9]/gi," ");
  var bws_2 = bws_1.trim();
  var getHeadUri = bws_2.replace(/s/g, "_");
- document.getElementById("post-toc").querySelectorAll("h2, h3, h4")[i].setAttribute("id", getHeadUri);
+ document.getElementById("post-toc").querySelectorAll("h2, h3, strong, h4")[i].setAttribute("id", getHeadUri);
  bwstoc = "<li><a href='#" + getHeadUri + "'>" + getheading + "</a></li>";
  document.getElementById("bwstoc").innerHTML += bwstoc;
  }
@@ -251,3 +251,4 @@ https://search.google.com/structured-data/testing-tool/u/0/
 }
 </script>
 {% endif %}
+
