--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -256,6 +256,28 @@ ga('send', 'pageview');
 ================================================== -->
 <div class="main-content">
     {{ content }}
+</div>
+</div>
+
+
+	<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';"></a><span id="spoiler_id" style="display: none;"><a class="link" onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';"></a>
+<div style="background-color: rgba(0, 0, 0, 0); margin: 1px;">
+<div class="smallfont"><i><span style="font-size: 16px; font-weight: bold; margin-right: 3px;"></span></i><input onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = ''; this.innerText = ''; this.value = 'Hide'; } else { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value = 'new posts'; }" style="background-color: #00000000; font-size: 16px; width: auto;" type="button" value="new posts" />
+</div>
+<div class="alt2" style="background-color: rgba(255, 255, 255, 0); margin: 0px; padding: 0px;">
+<div style="display: none;" loading="lazy">
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!-- Categories Jumbotron
 ================================================== -->
@@ -279,9 +301,9 @@ ga('send', 'pageview');
             {% endif %}
             {% assign categories_list = nil %}
 		</div>
-	</div>
-</div>
-	<br />
+	
+</div></div></div></span>
+	
 
 
 	
@@ -340,58 +362,108 @@ ga('send', 'pageview');
 {% if page.layout == 'post' %}
 <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
 {% endif %}
+	
 
 
-<script type='text/javascript'>
-        $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#btm_banner&#39;).hide(90);});});
-</script>
-        <!--start: floating ads-->
-        <div id='fl' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; top:30%;z-index:9999'>
-         <div><a id='close-fl' onclick='document.getElementById(&apos;fl&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
-    <div style='text-align:center;display:block;max-width:728px;height:auto;overflow:hidden;margin:auto'>
+
+
+
+
+
+
+
+	<div id='ds' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; bottom:0%;z-index:9999'>
+         <div><a id='close-ds' onclick='document.getElementById(&apos;ds&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
+    <div style='background-color:#fff; text-align:center;display:block;max-width:100%;height:50px;overflow:auto;margin:auto'>
 <script type="text/javascript">
 	atOptions = {
-		'key' : 'ab1c64f31d3f0bab7109e9dda1c2db72',
+		'key' : '7b4934b9a654d04b9b3f8792898d065b',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/7b4934b9a654d04b9b3f8792898d065b/invoke.js"></script>
+<br /><script type="text/javascript">
+	atOptions = {
+		'key' : 'a1f1be9129d1740ac77a71abe067b98f',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/a1f1be9129d1740ac77a71abe067b98f/invoke.js"></script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '615e81e0a564d30112632b0080c258d7',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/615e81e0a564d30112632b0080c258d7/invoke.js"></script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '232e9c1b69adf7a734e6278405b2be26',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/232e9c1b69adf7a734e6278405b2be26/invoke.js"></script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'bf693d886c078381bc1e76964f95d48c',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/bf693d886c078381bc1e76964f95d48c/invoke.js"></script><script type="text/javascript">
+	atOptions = {
+		'key' : '2e86d00a15c69fd9960d647d4d2e1040',
 		'format' : 'iframe',
 		'height' : 250,
 		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//bilateralgodmother.com/ab1c64f31d3f0bab7109e9dda1c2db72/invoke.js"></scr' + 'ipt>');
 </script>
-
-        </div>
- </div><!--end: floating ads-->
-	<script type='text/javascript'>
-        $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#btm_banner&#39;).hide(90);});});
-</script>
-        <!--start: floating ads-->
-        <div id='floa22123tads' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; top:30%;z-index:9999'>
-         <div><a id='close-floa22123tads' onclick='document.getElementById(&apos;floa22123tads&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
-    <div style='text-align:center;display:block;max-width:728px;height:auto;overflow:hidden;margin:auto'>
-
+<script type="text/javascript" src="//evendisciplineseedlings.com/2e86d00a15c69fd9960d647d4d2e1040/invoke.js"></script>
 <script type="text/javascript">
 	atOptions = {
-		'key' : '3fa6216209084767c5d794f398950b73',
+		'key' : '9fe0136e4b962da5f969b2f2bfba1224',
 		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
+		'height' : 60,
+		'width' : 468,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/3fa6216209084767c5d794f398950b73/invoke.js"></scr' + 'ipt>');
 </script>
-
-        </div>
- </div><!--end: floating ads-->
-<script type='text/javascript'>
-        $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#btm_banner&#39;).hide(90);});});
+<script type="text/javascript" src="//scheduleginnarcotic.com/9fe0136e4b962da5f969b2f2bfba1224/invoke.js"></script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '060046c5f582b02029184956af4c11a9',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
 </script>
-        <!--start: floating ads-->
-        <div id='floa2213tads' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; top:30%;z-index:9999'>
-         <div><a id='close-floa2213tads' onclick='document.getElementById(&apos;floa2213tads&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
-    <div style='text-align:center;display:block;max-width:728px;height:auto;overflow:hidden;margin:auto'>
-
-
+<script type="text/javascript" src="//scheduleginnarcotic.com/060046c5f582b02029184956af4c11a9/invoke.js"></script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '2ba0c36c9af8e2c3f20ab27f0a42b201',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//scheduleginnarcotic.com/2ba0c36c9af8e2c3f20ab27f0a42b201/invoke.js"></script>
 <script type="text/javascript">
 	atOptions = {
 		'key' : '76d83badbc00a7b58a041e25bbca8e3d',
@@ -400,34 +472,22 @@ ga('send', 'pageview');
 		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/76d83badbc00a7b58a041e25bbca8e3d/invoke.js"></scr' + 'ipt>');
 </script>
-
-        </div>
- </div><!--end: floating ads-->
-<script type='text/javascript'>
-        $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#btm_banner&#39;).hide(90);});});
-</script>
-        <!--start: floating ads-->
-        <div id='floa223tads' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; top:30%;z-index:9999'>
-         <div><a id='close-floa223tads' onclick='document.getElementById(&apos;floa223tads&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
-    <div style='text-align:center;display:block;max-width:728px;height:auto;overflow:hidden;margin:auto'>
-
-
+<script type="text/javascript" src="//scheduleginnarcotic.com/76d83badbc00a7b58a041e25bbca8e3d/invoke.js"></script>
 <script type="text/javascript">
 	atOptions = {
-		'key' : 'ffe565c40a085fbe64d1c8d1730caeeb',
+		'key' : 'ac8752679252d0311d6f2f240754ceb7',
 		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
+		'height' : 50,
+		'width' : 320,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/ffe565c40a085fbe64d1c8d1730caeeb/invoke.js"></scr' + 'ipt>');
 </script>
+<script type="text/javascript" src="//scheduleginnarcotic.com/ac8752679252d0311d6f2f240754ceb7/invoke.js"></script>
 
-        </div>
- </div><!--end: floating ads-->
-	
+
+
+</div></div>
 <script type="text/javascript">
    var uid = '342117';
    var wid = '712879';
