--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,6 @@
 
 <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
 
-<title>{{ page.title }} | {{site.name}}</title>
 
 {% seo %}
 
@@ -149,6 +148,8 @@ div.bcd140526_post_feed.column a.thumbnail img {
 }
 </style>
 
+
+<meta name="yandex-verification" content="084384b9f74df25c" />
 	
 </head>
 
