--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -158,11 +158,11 @@
 
     <div class="container pr-0">
 
-    <!-- Begin Logo -->
+    <!-- Begin Logo 
     <a class="navbar-brand" href="{{ site.url }}/">
     <img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.name }}"/>
     </a>
-    <!-- End Logo -->
+    End Logo -->
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
