--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -82,7 +82,23 @@ post_class: post-template
             
         </div>
         <!-- End Post -->
+<hr />        
+<b>More Posts</b>
 
+
+<h4 style="text-align: left;"><a href="https://www.ingganinggra.my.id/powtitor/" target="_blank">The Surprising Health and Environmental Benefits of Gardening as a Hobby</a></h4>
+
+<div class="separator" style="clear: both;"><a href="https://www.ingganinggra.my.id/powtitor/" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" data-original-height="381" data-original-width="678" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi-fsJo6RuHuUUKkvLP0QvqPClxlAhWJBTpSC7CwDHZpGm3ceYOeuL6__sxbi92oA7v_2HIDO8yPu12MC2GhCehbPzon2DCetzSRw15a-S23vN8Wiu1vyUPbLWh6Kgiy4m-tKEbmOpwTqBehaRfB4w6ywnaXARJAbuHRHDTLYF7squ1M7Hr0JA7fAnhm_uF/s1600/20240629_095151.jpg"/></a></div>
+
+<h4 style="text-align: left;"><a href="https://www.ingganinggra.my.id/customee/" target="_blank">Enjoying the Gardening Life: A Comprehensive Guide for Beginners</a></h4>
+
+
+<div class="separator" style="clear: both;"><a href="https://www.ingganinggra.my.id/customee/" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" data-original-height="414" data-original-width="736" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhbrqg77dy0cgKIaG8BwHWwbjcgXpGskGV9jfJjE9DsIsVzOf-pCO2AnadrVwZ9iEuPQKi4bdUQ0Zl3k6oj8KjXp-l_D8NppSJrXFdkhxMAqb82pZIPvh25-x5TxizuoP4iM5AfQ0j1R15VIm-L3rY7lFPam4jNaqfLxbyVpKELIAaN2LE_K2dCln4EDwwA/s1600/202406t29_074510.jpg"/></a></div>
+
+
+
+
+        
     </div>
 </div>
 <!-- End Article
