--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -82,7 +82,12 @@ post_class: post-template
             
         </div>
         <!-- End Post -->
-<hr />        
+<style type="text/css">
+	hr {
+		color: #ff5000;
+		background-color: #000;
+		}
+		</style>        
 <b>More Posts</b>
 
 <hr />
