--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -339,10 +339,12 @@
 
     
         <div class="row">
-            <div class="col-md-6 col-sm-6 text-center text-lg-left">
-                Copyright © {{ site.time | date: "%Y" }}&nbsp;-&nbsp;<a href="{{ site.url }}">{{ site.name }}</a>
+            <span class="col-md-6 col-sm-6 text-center text-lg-left" style="background-color:#000; color:#fff;" >
+               Contact: adabunalima5@gmail.com
+		    <br />
+		    Copyright © {{ site.time | date: "%Y" }}&nbsp;-&nbsp;<a href="{{ site.url }}">{{ site.name }}</a>
 		
-            </div>
+            </span>
             
         </div>
     </div>
