--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -189,7 +189,10 @@
 		    <li class="nav-item">
                 <a class="nav-link" href="{{ site.url }}/privacy-policy">Privacy Policy</a>
                 </li>
-
+<li class="nav-item">
+                <a class="nav-link" href="{{ site.url }}/About">About</a>
+                </li>
+		    
 		    <br />
 
                 {% include search-lunr.html %}
