--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -342,7 +342,7 @@
 
     
         <div class="row">
-            <span class="col-md-6 col-sm-6 text-center text-lg-left" style="background-color:#000; color:#fff;" >
+            <span class="col-md-6 col-sm-6 text-center text-lg-left" style="background-color:#fff; color:#000;" >
                Contact: adabunalima5@gmail.com
 		    <br />
 		    Copyright © {{ site.time | date: "%Y" }}&nbsp;-&nbsp;<a href="{{ site.url }}">{{ site.name }}</a>
